Wed Oct 13 17:51:17 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Merge patch from Ben Collins to fix windowresizing in dselect

Tue Oct 12 17:15:08 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * don't die if we can't open a package in dpkg-scanpackages, just print
    a warning and skip the package.

Mon Oct 11 18:18:25 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Move dselect into its own package

Mon Oct 11 17:37:47 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Added support for HURD to start-stop-daemon
  * Create new directory utils/ for extra C-programs, and move
    start-stop-daemon there.

Mon Oct 11 15:47:18 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Preparation to move start-stop-daemon from scripts to utils
  * Merge patches from Ben Collins <bcollins@debian.org>:
    + modify remove_buld to remove conffiles when purging a package before we
      remove its directories.
    + check if we violate conflicts/depends/pre-depends of other packages when
      processing an archive.

Mon Oct 11 02:13:15 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Merge patch from Ben Collins <bcollins@debian.org> to make dpkg-deb
    handle packages created with Linux ar.

Thu Oct  7 01:16:23 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Check if sequencecode is between 0 and 99 instead of just checking
    for a number in update-rc.d

Wed Oct  6 14:40:33 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Lock complete lockfile for database: it's empty anyway, and Hurd
    doesn't support partial locks currently
  * Don't use PATH_MAX but allocate necessay memory in checkpath().
    Useful for system that don't have PATH_MAX (like Hurd)

Tue Oct  5 19:16:38 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Set docdir to $(datadir)/doc
  * Install /etc/emacs/site-start.d/50dpkg-dev.el with mode 644

Tue Oct  5 04:08:41 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
