@@ -1,6 +1,9 @@
 Wed Oct 13 17:51:17 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
-  * Merge patch from Ben Collins to fix windowresizing in dselect
+  * Merge patches from Ben Collins <bcollins@debian.org>:
+    + fix windowresizing in dselect
+    + when upgrading check if a file is not also in the new package before removing
+	  it, so we don't remove new files due to symlinks confusing us
 
 Tue Oct 12 17:15:08 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
